# Python-Cisco-Backup

./: .gitignore  INSTALL.md  README.md  STORAGE.md  config.example.yaml  multivendor_run.py  pyproject.toml
router_backup/: __init__.py  cli.py  config.py  gui.py  gui_module.py  multivendor_run.py  storage.py  storage_git.py  storage_pygit.py  storagecli.py
router_backup/vendor_backups/: __init__.py  cisco_asa.py  cisco_ios.py  fortinet.py  huawei.py  juniper.py  lib.py  microtik.py  vyos.py
tests/: conftest.py  test_storage.py
vendor_backups/: dell_os6.py
